ServerFunction.java removed