@@ -1,15 +1,13 @@
 package goksoft.chat.app.service;
 
+import com.google.gson.reflect.TypeToken;
 import goksoft.chat.app.api.ApiClient;
 import goksoft.chat.app.model.dto.ApiResponse;
 import goksoft.chat.app.util.JsonUtil;
-import com.google.gson.reflect.TypeToken;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 
 public class MessageService {
@@ -21,45 +19,53 @@ public class MessageService {
         this.apiClient = apiClient;
     }
 
-    public CompletableFuture<ApiResponse<List<Map<String, String>>>> getMessages(String receiver) {
-        return apiClient.post("/messages/get?receiver=" + receiver, "")  // Changed to POST
-                .thenApply(responseJson -> {
-                    return JsonUtil.fromJson(
-                            responseJson,
-                            new TypeToken<ApiResponse<List<Map<String, String>>>>(){}
-                    );
+    /**
+     * Get messages between current user and receiver
+     * Backend returns: [[sender, message], [sender, message], ...]
+     */
+    public CompletableFuture<List<List<String>>> getMessages(String receiver) {
+        String url = "/messages/get?receiver=" + receiver;
+        return apiClient.post(url, "")
+                .thenApply(json -> {
+                    return JsonUtil.fromJson(json, new TypeToken<List<List<String>>>(){});
                 })
                 .exceptionally(ex -> {
-                    logger.error("Failed to get messages: {}", ex.getMessage());
-                    return new ApiResponse<>(false, "Connection error", Collections.emptyList());
+                    logger.error("Error fetching messages", ex);
+                    return List.of();
                 });
     }
 
+    /**
+     * Send a message to receiver
+     */
     public CompletableFuture<ApiResponse<String>> sendMessage(String receiver, String message) {
-        return apiClient.post("/messages/send?receiver=" + receiver + "&message=" + message, "")
-                .thenApply(responseJson -> {
-                    return JsonUtil.fromJson(
-                            responseJson,
-                            new TypeToken<ApiResponse<String>>(){}
-                    );
-                })
+        String url = "/messages/send?receiver=" + receiver + "&message=" + message;
+        return apiClient.post(url, "")
+                .thenApply(json -> JsonUtil.fromJson(json, new TypeToken<ApiResponse<String>>(){}))
                 .exceptionally(ex -> {
-                    logger.error("Failed to send message: {}", ex.getMessage());
+                    logger.error("Error sending message", ex);
                     return new ApiResponse<>(false, "Connection error", null);
                 });
     }
 
-    public CompletableFuture<ApiResponse<Integer>> checkNotification(String chatter) {
-        return apiClient.post("/messages/check-notif?chatter=" + chatter, "")
-                .thenApply(responseJson -> {
-                    return JsonUtil.fromJson(
-                            responseJson,
-                            new TypeToken<ApiResponse<Integer>>(){}
-                    );
+    /**
+     * Check notification count for a specific chatter
+     * Backend returns: notification count as plain text string
+     */
+    public CompletableFuture<Integer> checkNotification(String chatter) {
+        String url = "/messages/check-notif?chatter=" + chatter;
+        return apiClient.post(url, "")
+                .thenApply(responseStr -> {
+                    try {
+                        return Integer.parseInt(responseStr.trim());
+                    } catch (NumberFormatException e) {
+                        logger.warn("Invalid notification count format: {}", responseStr);
+                        return 0;
+                    }
                 })
                 .exceptionally(ex -> {
-                    logger.error("Failed to check notification: {}", ex.getMessage());
-                    return new ApiResponse<>(false, "Connection error", 0);
+                    logger.error("Error checking notifications", ex);
+                    return 0;
                 });
     }
 }
